--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.13.5",
+        "cheerio": "^1.2.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
