--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.13.4",
+    "dompurify": "^3.3.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
