--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "express": "^4.19.2",
         "express-session": "^1.19.0",
         "jsonwebtoken": "^9.0.3",
+        "multer": "^2.0.2",
         "mysql2": "^3.16.2",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0"
